<resources>
    <string name="leak_canary_test_class_name">assertk.Assert</string>
    <string name="password">Senha</string>
    <string name="email">Email</string>

    <string name="finish">Finalizar</string>

    <string name="welcome">Bem Vindo</string>

    <string name="jump">Pular</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="frag_auth_options_text_title">Escolha uma opção para cadastro</string>
    <string name="phone">Telefone</string>
    <string name="already_registered">Já tenho uma conta</string>
    <string name="enter_phone">Digite seu telefone</string>
    <string name="phone_verification_message">Você receberá um código de verificação por mensagem de texto</string>
    <string name="receive_code">Receber código</string>

    <string name="enter_code">Digite o código de verificação</string>
    <string name="try_again">Tentar novamente</string>
    <string name="already_have_a_code">Já tenho um código</string>
    <string name="name">Nome</string>
    <string name="surname">Sobrenome</string>
    <string name="confirm_password">Confirme a senha</string>
    <string name="create_account">Criar conta</string>
    <string name="account_creation">Criação de conta</string>
    <string name="or">ou</string>
    <string name="resend">Reenviar</string>
    <string name="await">Aguarde 0:</string>
    <string name="to_send_another_email">para enviar novamente</string>
    <string name="to_resend">para reenviar</string>
    <string name="enter_name">Digite seu nome</string>
    <string name="register_new_account">Cadastrar nova conta</string>
    <string name="validating_email">Validando email...</string>
    <string name="validating_email_description">Enviamos um email de confirmação.\n Verifique sua caixa de entrada.</string>
    <string name="resend_email">Reenviar email</string>
    <string name="email_valid">Email valido!!</string>
    <string name="registration_in_progress">Encontramos um cadastro em andamento</string>
    <string name="status">Status</string>
    <string name="email_registered">Email cadastrado</string>
    <string name="email_verified">Email verificado</string>
    <string name="finish_register">Finalizar cadastro</string>
    <string name="register_new_email">Cadastrar novo email</string>
    <string name="enter">Entrar</string>
    <string name="forget_password">Esqueci a senha</string>
    <string name="keep_logged">Manter conectado</string>
    <string name="recover_password_title">Recuperação de senha</string>
    <string name="recover_password_message">Te enviaremos um email para alteração de senha</string>
    <string name="send">Enviar</string>
    <string name="name_not_informed">Nome informado</string>
    <string name="employee">Funcionários</string>
    <string name="fleet">Frota</string>
    <string name="documents">Documentos</string>
    <string name="driver">Motorista</string>
    <string name="home">Início</string>
    <string name="connection_error_header">Erro de rede</string>
    <string name="connection_error_body">Verifique sua conexão com a internet e tente novamente</string>
    <string name="send_verification_email">Enviar email</string>
    <string name="business">Empresa</string>
    <string name="edit_business">Editar empresa</string>
    <string name="edit_employee">Editar funcionário</string>
    <string name="fines">Infrações</string>
    <string name="preferences">Preferências</string>
    <string name="logout">Sair do app</string>
    <string name="messages">Mensagens</string>
    <string name="settings">Configurações</string>
    <string name="profile">Perfil</string>
    <string name="business_info">Informações da Empresa</string>
    <string name="cnpj">Cnpj</string>
    <string name="cnpj_caps">CNPJ</string>
    <string name="opening">Abertura</string>
    <string name="municipal_registration_abbrev">Insc. Municipal</string>
    <string name="state_registration_abbrev">Insc. Estadual</string>
    <string name="antt_caps">ANTT</string>
    <string name="complete_register">Concluir cadastro</string>
    <string name="save">Salvar</string>

</resources>