<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".layers.presentation.login.fragments.forget_password.ForgetPasswordFragment"
    android:orientation="vertical"
    android:id="@+id/frag_forget_pass_bg">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="@dimen/textExtraBig"
        android:text="@string/recover_password_title"
        android:gravity="center"
        android:layout_marginTop="56dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="32dp"
        android:textSize="@dimen/textMedium"
        android:text="@string/recover_password_message" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/frag_forget_pass_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/email"
        app:errorEnabled="true"
        app:helperTextEnabled="true"
        app:startIconDrawable="@drawable/icon_email"
        app:helperTextTextColor="?attr/colorSecondary"
        android:layout_marginHorizontal="48dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/frag_forget_pass_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        style="@style/buttonPrimary"
        android:id="@+id/frag_forget_pass_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        android:text="@string/send"
        android:layout_marginTop="48dp"/>

</LinearLayout>