<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.fragments.continue_register.ContinueRegisterFragment">

    <LinearLayout
        android:id="@+id/frag_continue_register_layout_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/frag_continue_register_layout_button"
        android:layout_margin="16dp">

        <TextView
            style="@style/textEmphasis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/registration_in_progress" />

        <TextView
            android:id="@+id/frag_continue_register_email_text"
            style="@style/textDefault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="32dp"
            android:gravity="center"
            tools:text="some@email.com" />

        <TextView
            style="@style/textDefault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/status"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/frag_continue_register_email_status_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="8dp"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:text="@string/email_registered"
            app:drawableLeftCompat="@drawable/level_list_status_icons" />

        <TextView
            android:id="@+id/frag_continue_register_verified_status_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="8dp"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:text="@string/email_verified"
            app:drawableLeftCompat="@drawable/level_list_status_icons" />

        <TextView
            android:id="@+id/frag_continue_register_name_status_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="8dp"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:text="Nome informado"
            app:drawableLeftCompat="@drawable/level_list_status_icons" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/frag_continue_register_layout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frag_continue_register_layout_text">

        <Button
            android:id="@+id/frag_continue_register_finish_register_button"
            style="@style/buttonPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/finish_register"/>

        <Button
            android:id="@+id/frag_continue_register_new_email_button"
            style="@style/buttonSecondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_new_email"
            android:layout_marginTop="32dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>