<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation._shared.views.fragments.no_connection.NoConnectionFragment"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connection_error_header"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginHorizontal="32dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connection_error_body"
        android:gravity="center"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp"/>

    <FrameLayout
        android:id="@+id/frag_no_connection_frame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp">

        <Button
            android:id="@+id/frag_no_connection_button"
            style="@style/buttonTertiary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/try_again"/>

        <ProgressBar
            android:id="@+id/frag_no_connection_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            style="?android:attr/progressBarStyleSmall"
            android:indeterminateDrawable="@drawable/progress_bar_gradient"
            android:visibility="gone"/>

    </FrameLayout>


</LinearLayout>