<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient_primary"
    tools:context=".view.fragments.login.LoginFragment"
    android:id="@+id/frag_login_background">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="16dp"
        android:translationZ="11dp"
        app:cardElevation="11dp"
        android:id="@+id/frag_login_card">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="32dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_gravity="center"
                android:importantForAccessibility="no"
                android:src="@drawable/image_profile" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/frag_login_email_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:hint="@string/email"
                app:errorEnabled="true"
                app:helperTextEnabled="true"
                app:startIconDrawable="@drawable/icon_email"
                app:helperTextTextColor="@color/green"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/frag_login_email_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/frag_login_password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:hint="@string/password"
                app:endIconMode="password_toggle"
                app:errorEnabled="true"
                app:startIconDrawable="@drawable/icon_key"
                app:helperTextEnabled="true"
                app:helperTextTextColor="@color/green">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/frag_login_password_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="numberPassword"
                    android:maxLines="1"
                    app:counterMaxLength="12" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/frag_login_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/keep_logged"
                android:textSize="@dimen/textSmall"
                app:checkedState="checked" />

            <Button
                android:id="@+id/frag_login_enter_button"
                style="@style/buttonPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="0dp"
                android:layout_marginTop="48dp"
                android:text="@string/enter" />

            <Button
                android:id="@+id/frag_login_new_account_button"
                style="@style/buttonSecondary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="0dp"
                android:layout_marginTop="32dp"
                android:text="@string/register_new_account" />

            <Button
                android:id="@+id/frag_login_forget_password_button"
                style="@style/buttonTransparent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginHorizontal="0dp"
                android:layout_marginTop="8dp"
                android:text="@string/forget_password"
                android:textSize="@dimen/textSmall" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</FrameLayout>