<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frag_phone_auth_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.phone_auth.PhoneAuthFragment">

    <LinearLayout
        android:id="@+id/frag_phone_auth_title_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15">

        <TextView
            android:id="@+id/frag_phone_auth_title"
            style="@style/TEXT_EMPHASIS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/enter_phone" />

        <TextView
            android:id="@+id/frag_phone_auth_message"
            style="@style/TEXT_DEFAULT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:text="@string/phone_verification_message" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/frag_phone_txt_view_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frag_phone_auth_title_layout"
        app:layout_constraintVertical_bias="0.15">

        <com.hbb20.CountryCodePicker
            android:id="@+id/frag_phone_auth_ccp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:ccp_countryPreference="br"
            app:ccp_defaultPhoneCode="55"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/frag_phone_auth_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/phone"
            android:imeOptions="actionDone"
            android:inputType="phone"
            android:maxLength="13"
            android:singleLine="true"
            tools:text="99 99999-9999" />
    </LinearLayout>

    <Button
        android:id="@+id/frag_phone_auth_button"
        style="@style/FAB_PRIMARY"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="64dp"
        android:enabled="false"
        android:text="@string/receive_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frag_phone_txt_view_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>