<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="16dp"
    android:layout_marginTop="16dp"
    tools:context=".business_admin.layers.presentation.main.fragments.edit_business.EditBusinessFragment">

    <include
        android:id="@+id/frag_edit_business_layout_shimmer"
        layout="@layout/layout_shimmer_edit_texts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/frag_edit_business_layout_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">
        <!-- NAME -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/frag_edit_business_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/frag_edit_business_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="textCapWords"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- CNPJ -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/frag_edit_business_cnpj_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/cnpj">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/frag_edit_business_cnpj"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="18"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- STATE -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/frag_edit_business_state_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/state_registration_abbrev">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/frag_edit_business_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="12"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- MUNICIPAL -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/frag_edit_business_municipal_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/municipal_registration_abbrev">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/frag_edit_business_municipal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="15"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- OPENING -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/frag_edit_business_opening_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/opening">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/frag_edit_business_opening"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="date"
                android:maxLength="8"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

</FrameLayout>