<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.auth_options.AuthOptionsFragment">

    <ImageView
        android:id="@+id/frag_auth_options_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:importantForAccessibility="no"
        android:src="@drawable/gif_locked"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/frag_auth_options_text"
        style="@style/TEXT_EMPHASIS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/frag_auth_options_text_string"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frag_auth_options_image" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frag_auth_options_text">

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/frag_auth_options_fab_phone"
            style="@style/EXTENDED_FAB_SECONDARY"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            app:icon="@drawable/icon_phone" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/frag_auth_options_fab_email"
            style="@style/EXTENDED_FAB_PRIMARY"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/email"
            app:icon="@drawable/icon_mail" />

        <Button
            android:id="@+id/frag_auth_options_button"
            style="@style/BUTTON_TRANSPARENT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/already_registered" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>